fixed brand logo white space

--- a/application/views/common-css/3style.css
+++ b/application/views/common-css/3style.css
@@ -14814,7 +14814,7 @@ main.main {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 1rem;
+	padding: 0;
 }
 
 /*Checkout-flow*/
